<resources>
    <string name="app_name">TimeToLiveRadio</string>
    <string name="play">Play</string>
    <string name="text_more">More</string>
    <string name="text_journal">Journal</string>
    <string name="text_radio">Radio</string>
    <string name="text_tv">TV</string>
    <string name="text_program">Program</string>
    <string name="journal_text">JazznBluesExperience is your channel for all the best jazz and blues music. Find your favorite songs and artists and experience the best of jazz music and blues music. Subscribe for free to stay</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="program1_text">Корисна смакота для любителів залізних конячок. Те що турбувало, турбуватиме або просто інформація про світ досягнень у галузі швидкості та екологічності авто. Все найцікавіше для автомобілістів у авторській передачі від Гординяка Максима. Ваш автомобіль заслуговує на Ваші знання про світ заліза!</string>
    <string name="program1_title_text">Дорога без жезлу</string>
    <string name="program1_duration">10 автомобільних хвилин</string>
    <string name="program2_title_text">Ранок повинен бути добрим</string>
    <string name="program2_duration">1 щаслива година</string>
    <string name="program2_text">Ранкова програма про щастя нового дня, для створення Вашого хорошого настрою та зарядження Вас методиками очищення від поганих думок. програма, яка заставить Вас повірити у щастя та його прояви у найрізноманітніших життєвих формах! Ви зможете насолодитись прекрасною музикою та послухати астрологічний прогноз на цілий день. Ви маєте змогу передати вітання та побажати від себе особисто найріднішим людям хорошого дня та признатись у своїх почуттях до них! Адже саме підтримка близьких людей відіграє найпотужнішу роль у формуванні Вашого світогляду! Створіть та передайте частинку добра на цілу Україну! Зробіть свій ранок позитивним з нами на хвилі добра від Butterflяkи!</string>
    <string name="program3_title_text">Історія або як все було</string>
    <string name="program3_duration">15–20 неймовірно цікавих хвилин</string>
    <string name="program3_text">Кожного дня у минулому щось ставалося, будьте обізнані зі світом та віддайте шану тим, хто зробив світ кращим сам для Вас! Передача, про неймовірні чудеса світу кожного дня. А світ то насправді безмежний, нумо пізнавати його разом.</string>
    <string name="program4_title_text">Мелодія, що Вас любить</string>
    <string name="program4_duration">40 хвилин</string>
    <string name="program4_text">Те, що заставляє Вашу кров рухатись швидше, легені відчувати волю і настрій зашкалювати. Найкращі хіти, які супроводжують Вас усе життя, залишилось тільки милуватися ними.</string>
    <string name="program5_title_text">Світ новин</string>
    <string name="program5_duration">10 інформаційних хвилин</string>
    <string name="program6_title_text">Смачнезний обід</string>
    <string name="program6_duration">1 годинка</string>
    <string name="program6_text">Щоби всім ся файно їло треба скоро попередавати всім привіти. Не дайте рутині робочого дня забрати Вас повністю. Як це зробити ви собі уявляєте, тому звоніть пишіть і ми з вами ся файно побавимо). Іменини, свята і просто позитив потрібно відмічати і тішитись з того. Ваша позитивна енергетика залюбки викличе посмішку у Ваших близьких, не забувайте про них ніколи.</string>
    <string name="program7_title_text">Подорож для душі</string>
    <string name="program7_duration">20 хвилин</string>
    <string name="program7_text">Відпочинок це добре, головне не забувати про його користь. Як, куди і взагалі що варто відвідати в Україні Вам розкаже радіо Butterflяka. Шануйте природу, бережіть те, що вона створила і збагачуйтесь енергією для щасливого життя.</string>
    <string name="program8_title_text">Віддихнісімо</string>
    <string name="program8_text">Подаруйте своїм коханим романтичний вечір. Зберіть свої думки в один фрактал. Ви знаєте,  чого варті. Авторська програма про добро, тепло посмішки та затишок нічної ковдри від Вашого улюбленого радіо!</string>
    <string name="program9_title_text">Спортивна хвилинка</string>
    <string name="program10_text">Єдина у своєму роді авторська програма про очищення організму, розуміння свого внутрішнього Я. Правильна музика та медитація. Все про щастя і його прояви. Йога думки, яка назавжди змінить Ваше життя. Станьте кращими, повірте  енергія тіла та душі важливіша за матеріальні речі. Як це зробити, знає наш автор Максим. \"Ця гармонія в природі, я тільки покажу її Вам…\"</string>
    <string name="program10_duration">1 година</string>
    <string name="program10_title_text">Перехід свідомості</string>
    <string name="program11_title_text">Вечірнє кріселко</string>
    <string name="program11_text">Вечір тихенько прийшов і ви вже вдома? Файно настройтесь на релакс та побажайте всім вдалого вечора. Програма привітань для тих, хто цінує своїх близьких.</string>
    <string name="program11_duration">1 година</string>
    <string name="program12_title_text">І таке в житті було…</string>
    <string name="program12_duration">30 хвилин</string>
    <string name="business_radio_title">TTL Radio</string>
    <string name="text_exit">Вийти з програми</string>
    <!--<string name="media_url_mp3">http://lin3.ash.fast-serv.com:6026/stream_96</string>-->
    <string name="media_url_mp3">http://radiottl.ddns.net:8000/timeradio</string>
    <string name="text_favorite">FAVORITE</string>
    <string name="text_order_song">ORDER SONG</string>
</resources>
